--- a/src/styles.css
+++ b/src/styles.css
@@ -120,7 +120,7 @@ thead {
 
 .badge-soft-paper {
   color: #fff !important;
-  background-color: #63ad6f;
+  background-color: #28a745;
   font-size: 12px;
 }
 
@@ -132,7 +132,7 @@ thead {
 
 .badge-soft-metals {
   color: #fff !important;
-  background-color: rgba(183, 61, 61, 0.89);
+  background-color: rgba(164, 47, 47, 0.87);
   font-size: 12px;
 }
 
