--- a/src/app/component/center-details/center-details.component.html
+++ b/src/app/component/center-details/center-details.component.html
@@ -1,12 +1,13 @@
 <ng-container *ngIf="(centerDetailsState$ | async) as state" [ngSwitch]="state.dataState">
   <ng-container *ngSwitchCase="DataState.LOADED">
     <app-navbar [user]="state?.appData?.data?.user"></app-navbar>
+    <div style="margin-top: 90px"> </div>
     <section>
       <div class="container center-details">
         <nav aria-label="breadcrumb" style="margin-top: 20px;">
           <ol class="breadcrumb">
             <li class="breadcrumb-item"><a [routerLink]="['/']">Home</a></li>
-            <li class="breadcrumb-item"><a [routerLink]="['/customers']">Centers</a></li>
+            <li class="breadcrumb-item"><a [routerLink]="['/centers/all']">Centers</a></li>
             <li class="breadcrumb-item active" aria-current="page">{{ state?.appData?.data?.center.name }}</li>
           </ol>
         </nav>
@@ -24,8 +25,6 @@
                         <span class="badge mb-0" [ngClass]="material.badgeClass">{{ material.name }}</span>
                       </ng-container>
                     </div>
-
-
                   </div>
                 </div>
               </div>
