--- a/src/app/component/center-new/center-new.component.html
+++ b/src/app/component/center-new/center-new.component.html
@@ -2,12 +2,13 @@
 <ng-container *ngIf="(newCenterState$ | async) as state" [ngSwitch]="state.dataState">
   <ng-container *ngSwitchCase="DataState.LOADED">
     <app-navbar [user]="state?.appData?.data?.user"></app-navbar>
+    <div style="margin-top: 100px"> </div>
     <section>
       <div class="container mt-4">
         <nav aria-label="breadcrumb">
           <ol class="breadcrumb">
             <li class="breadcrumb-item"><a [routerLink]="['/']">Home</a></li>
-            <li class="breadcrumb-item"><a [routerLink]="['/customers']">Centers</a></li>
+            <li class="breadcrumb-item"><a [routerLink]="['/centers/all']">Centers</a></li>
             <li class="breadcrumb-item active" aria-current="page">New</li>
           </ol>
         </nav>
@@ -42,30 +43,66 @@
                     <div class="col-md-6 mb-3">
                       <div class="form-group">
                         <label>County</label>
-                        <input type="text" formControlName="county" class="form-control" [typeahead]="counties"
-                               [minLength]="0" [typeaheadWaitMs]="10" placeholder="Select County"
+                        <input type="text"
+                               formControlName="county"
+                               class="form-control"
+                               [typeahead]="counties"
+                               [minLength]="0"
+                               [typeaheadWaitMs]="10"
+                               placeholder="Select County"
                                (typeaheadOnSelect)="onSelectCounty($event)" />
                       </div>
                     </div>
                     <div class="col-md-6 mb-3">
                       <div class="form-group">
                         <label>City</label>
-                        <input type="text" formControlName="city" class="form-control" [typeahead]="cities"
-                               [minLength]="0" [typeaheadWaitMs]="10" placeholder="Select City"
+                        <input type="text"
+                               formControlName="city"
+                               class="form-control"
+                               [typeahead]="cities"
+                               [minLength]="0"
+                               [typeaheadWaitMs]="10"
+                               placeholder="Select City"
                                (typeaheadOnSelect)="onSelectCity($event)" />
                       </div>
                     </div>
                     <div class="col-md-6 mb-3">
                       <label for="address">Address</label>
-                      <input type="text" formControlName="address" class="form-control" id="address" placeholder="Ex. Eco 123" required>
+                      <input type="text" formControlName="address"
+                             class="form-control"
+                             id="address"
+                             placeholder="Ex. Eco 123"
+                             required>
                     </div>
 
                     <div class="col-md-6 mb-3">
                       <label>Accepted Materials</label>
-                      <input formControlName="materials" [typeahead]="availableMaterials" [minLength]="0"
-                             [typeaheadWaitMs]="10" placeholder="Accepted Materials" class="form-control"
+                      <input formControlName="materials"
+                             [typeahead]="availableMaterials"
+                             [minLength]="0"
+                             [typeaheadWaitMs]="10"
+                             placeholder="Accepted Materials"
+                             class="form-control"
                              (typeaheadOnSelect)="onSelectMaterials($event)" />
                     </div>
+
+<!--                    <div>-->
+<!--                      <div class="form-group">-->
+<!--                        <label for="contact">Description</label>-->
+<!--                        <input  type="text"  formControlName="description" name="contact" class="form-control" id="description" placeholder="About you">-->
+<!--                      </div>-->
+<!--                    </div>-->
+
+                    <div class="col-md-6 mb-3">
+                      <mat-slide-toggle formControlName="alwaysOpen"> <span style="margin-left: 8px">Always Open</span></mat-slide-toggle>
+                      <i class="fa-solid fa-circle-info" style="margin-left: 10px"></i>
+                    </div>
+
+
+
+                    <div></div>
+
+
 
                     <ng-container *ngIf="!newCenterForm.get('alwaysOpen').value">
                       <div class="col-md-6 mb-3">
@@ -79,22 +116,18 @@
                       </div>
                     </ng-container>
 
-                    <div class="col-md-6 mb-3">
-                      <label>Always Open</label>
-                      <input type="checkbox" formControlName="alwaysOpen">
-                    </div>
-
 
                     <ng-container *ngIf="selectedMaterials.length > 0">
-                      <div class="selected-materials">
-                        <label class="mb-3 mt-3">Materials accepted by your center:</label>
-                        <br>
-                        <div *ngFor="let material of selectedMaterials" class="badge bg-success">
-                          {{ material }}
-                          <button type="button" class="btn-close" aria-label="Remove" (click)="onRemoveMaterial(material)"></button>
+                      <mat-chip-grid #chipGrid aria-label="Enter keywords">
+                        <div *ngFor="let material of selectedMaterials">
+                          <mat-chip-row (removed)="onRemoveMaterial(material)">
+                            {{ material }}
+                            <button matChipRemove aria-label="Remove" (click)="onRemoveMaterial(material)">
+                              <mat-icon>cancel</mat-icon>
+                            </button>
+                          </mat-chip-row>
                         </div>
-                      </div>
-
+                      </mat-chip-grid>
                     </ng-container>
 
 
@@ -117,7 +150,7 @@
                       <span *ngIf="!(isLoading$ | async)">Create Center</span>
                     </button>
 
-                    <button type="button" class="btn btn-secondary" [routerLink]="['/customers']">Cancel</button>
+<!--                    <button type="button" class="btn btn-secondary" [routerLink]="['/customers']">Cancel</button>-->
                   </div>
                 </form>
               </div>
