--- a/src/app/component/stats/stats.component.html
+++ b/src/app/component/stats/stats.component.html
@@ -1,68 +1,67 @@
-<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
-
-<div class="container" style="margin-top: 1cm;">
+<div class="container" style="margin-top: 10px;">
   <div class="row row-cols-1 row-cols-md-2 row-cols-xl-4">
+    <!-- Card 1 -->
     <div class="col">
-      <div class="card radius-10 border-start border-0 border-3 border-info">
-        <div class="card-body">
-          <div class="d-flex align-items-center">
-            <div>
-              <p class="mb-0 text-secondary">Active Recyclers</p>
-              <h4 class="my-1 text-info">48K</h4>
-              <p class="mb-0 font-13">of us helping make our planet greener</p>
-            </div>
-            <div class="widgets-icons-2 rounded-circle bg-gradient-scooter text-white ms-auto"><i class="fa fa-users"></i>
-            </div>
+      <div class="card border-info">
+        <div class="card-body d-flex align-items-center">
+          <div>
+            <p class="mb-0 text-secondary">Active Recyclers</p>
+            <h4 class="my-1 text-info">48K</h4>
+            <p class="mb-0 font-13">of us helping make our planet greener</p>
+          </div>
+          <div class="widgets-icons-2 rounded-circle bg-gradient-scooter text-white ms-auto">
+            <i class="fa fa-users"></i>
           </div>
         </div>
       </div>
     </div>
+
+    <!-- Card 2 -->
     <div class="col">
-      <div class="card radius-10 border-start border-0 border-3 border-danger">
-        <div class="card-body">
-          <div class="d-flex align-items-center">
-            <div>
-              <p class="mb-0 text-secondary">My Environmental Impact</p>
-              <h4 class="my-1 text-danger">+0.44%</h4>
-              <p class="mb-0 font-13">my environmental impact this month</p>
-            </div>
-            <div class="widgets-icons-2 rounded-circle bg-gradient-bloody text-white ms-auto"><i class="fa-solid fa-leaf"></i>
-            </div>
+      <div class="card border-danger">
+        <div class="card-body d-flex align-items-center">
+          <div>
+            <p class="mb-0 text-secondary">My Environmental Impact</p>
+            <h4 class="my-1 text-danger">+0.44%</h4>
+            <p class="mb-0 font-13">my environmental impact this month</p>
+          </div>
+          <div class="widgets-icons-2 rounded-circle bg-gradient-bloody text-white ms-auto">
+            <i class="fa-solid fa-leaf"></i>
           </div>
         </div>
       </div>
     </div>
+
+    <!-- Card 3 -->
     <div class="col">
-      <div class="card radius-10 border-start border-0 border-3 border-success">
-        <div class="card-body">
-          <div class="d-flex align-items-center">
-            <div>
-              <p class="mb-0 text-secondary">Environmental Impact</p>
-              <h4 class="my-1 text-success">38.9%</h4>
-              <p class="mb-0 font-13">of the planet is safer because of us</p>
-            </div>
-            <div class="widgets-icons-2 rounded-circle bg-gradient-ohhappiness text-white ms-auto"><i class="fa fa-bar-chart"></i>
-            </div>
+      <div class="card border-success">
+        <div class="card-body d-flex align-items-center">
+          <div>
+            <p class="mb-0 text-secondary">Global Environmental Impact</p>
+            <h4 class="my-1 text-success">38.9%</h4>
+            <p class="mb-0 font-13">of the planet is positively impacted by us</p>
+          </div>
+          <div class="widgets-icons-2 rounded-circle bg-gradient-ohhappiness text-white ms-auto">
+            <i class="fa-solid fa-earth-americas"></i>
           </div>
         </div>
       </div>
     </div>
+
+    <!-- Card 4 -->
     <div class="col">
-      <div class="card radius-10 border-start border-0 border-3 border-warning">
-        <div class="card-body">
-          <div class="d-flex align-items-center">
-            <div>
-              <p class="mb-0 text-secondary">My Reward Points</p>
-              <h4 class="my-1 text-warning">2.500</h4>
-              <p class="mb-0 font-13">reward points for makeing such a great job</p>
-            </div>
-            <div class="widgets-icons-2 rounded-circle bg-gradient-blooker text-white ms-auto"><i class="fa-solid fa-award"></i>
-            </div>
+      <div class="card border-warning">
+        <div class="card-body d-flex align-items-center">
+          <div>
+            <p class="mb-0 text-secondary">My Reward Points</p>
+            <h4 class="my-1 text-warning">2.500</h4>
+            <p class="mb-0 font-13">reward points accumulated this month</p>
+          </div>
+          <div class="widgets-icons-2 rounded-circle bg-gradient-blooker text-white ms-auto">
+            <i class="fa-solid fa-award"></i>
           </div>
         </div>
       </div>
     </div>
   </div>
 </div>
-
-
