--- a/src/app/component/stats/stats.component.css
+++ b/src/app/component/stats/stats.component.css
@@ -1,47 +1,31 @@
-body{
-  margin-top:20px;
-  background-color: #f7f7ff;
-}
-.radius-10 {
-  border-radius: 10px !important;
+.card {
+  border-radius: 10px;
+  margin-bottom: 1.5rem;
+  box-shadow: 0 2px 6px 0 rgba(218, 218, 253, 0.65), 0 2px 6px 0 rgba(206, 206, 238, 0.54);
 }
 
 .border-info {
-  border-left: 5px solid  #0dcaf0 !important;
+  border-left: 5px solid #0dcaf0;
 }
+
 .border-danger {
-  border-left: 5px solid  #fd3550 !important;
+  border-left: 5px solid #fd3550;
 }
+
 .border-success {
-  border-left: 5px solid  #15ca20 !important;
+  border-left: 5px solid #15ca20;
 }
+
 .border-warning {
-  border-left: 5px solid  #ffc107 !important;
+  border-left: 5px solid #ffc107;
 }
 
-
-.card {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  min-width: 0;
-  word-wrap: break-word;
-  background-color: #fff;
-  background-clip: border-box;
-  border: 0px solid rgba(0, 0, 0, 0);
-  border-radius: .25rem;
-  margin-bottom: 1.5rem;
-  box-shadow: 0 2px 6px 0 rgb(218 218 253 / 65%), 0 2px 6px 0 rgb(206 206 238 / 54%);
-}
 .bg-gradient-scooter {
   background: #17ead9;
-  background: -webkit-linear-gradient(
-    45deg
-    , #17ead9, #6078ea)!important;
-  background: linear-gradient(
-    45deg
-    , #17ead9, #6078ea)!important;
+  background: -webkit-linear-gradient(45deg, #17ead9, #6078ea) !important;
+  background: linear-gradient(45deg, #17ead9, #6078ea) !important;
 }
+
 .widgets-icons-2 {
   width: 56px;
   height: 56px;
@@ -52,41 +36,33 @@ body{
   font-size: 27px;
   border-radius: 10px;
 }
+
 .rounded-circle {
-  border-radius: 50%!important;
+  border-radius: 50% !important;
 }
+
 .text-white {
-  color: #fff!important;
+  color: #fff !important;
 }
+
 .ms-auto {
-  margin-left: auto!important;
+  margin-left: auto !important;
 }
+
 .bg-gradient-bloody {
   background: #f54ea2;
-  background: -webkit-linear-gradient(
-    45deg
-    , #f54ea2, #ff7676)!important;
-  background: linear-gradient(
-    45deg
-    , #f54ea2, #ff7676)!important;
+  background: -webkit-linear-gradient(45deg, #f54ea2, #ff7676) !important;
+  background: linear-gradient(45deg, #f54ea2, #ff7676) !important;
 }
 
 .bg-gradient-ohhappiness {
   background: #00b09b;
-  background: -webkit-linear-gradient(
-    45deg
-    , #00b09b, #96c93d)!important;
-  background: linear-gradient(
-    45deg
-    , #00b09b, #96c93d)!important;
+  background: -webkit-linear-gradient(45deg, #00b09b, #96c93d) !important;
+  background: linear-gradient(45deg, #00b09b, #96c93d) !important;
 }
 
 .bg-gradient-blooker {
   background: #ffdf40;
-  background: -webkit-linear-gradient(
-    45deg
-    , #ffdf40, #ff8359)!important;
-  background: linear-gradient(
-    45deg
-    , #ffdf40, #ff8359)!important;
+  background: -webkit-linear-gradient(45deg, #ffdf40, #ff8359) !important;
+  background: linear-gradient(45deg, #ffdf40, #ff8359) !important;
 }
