--- a/src/app/component/center-all/center-all.component.html
+++ b/src/app/component/center-all/center-all.component.html
@@ -147,22 +147,21 @@
             <!-- Table Header -->
             <thead class="bg-gradient text-white">
             <tr>
-              <th scope="col"  class="text-center">Photo</th>
-              <th scope="col" mat-sort-header="name">Name</th>
-              <th scope="col">Contact</th>
-              <th scope="col" mat-sort-header="county" class="sortable" [class.filtered]="isFiltered('county')">County</th>
-              <th scope="col" mat-sort-header="city" class="sortable" [class.filtered]="isFiltered('city')">City</th>
-              <th scope="col" mat-sort-header="materials" class="sortable" [class.filtered]="isFiltered('materials')">Accepted Materials</th>
-              <th scope="col"  class="text-center">Working Intervals</th>
-              <th scope="col" class="text-center">Action</th>
+              <th class="text-center" scope="col" style="width: 6%;">Photo</th>
+              <th scope="col" mat-sort-header="name" style="width: 15%;">Center Name</th>
+              <th scope="col" style="width: 15%;">Contact Information</th>
+              <th scope="col" mat-sort-header="county" style="width: 10%;">County</th>
+              <th scope="col" mat-sort-header="city" style="width: 10%;">City</th>
+              <th scope="col" mat-sort-header="materials" class="text-center" style="width: 20%;">Accepted Materials</th>
+              <th class="text-center" scope="col" style="width: 12%;">Working Intervals</th>
+              <th scope="col" style="width: 6%;" class="text-center">Engage</th>
             </tr>
             </thead>
-
             <!-- Table Body -->
             <tbody *ngFor="let center of state?.appData?.data?.page?.content" class="table-body">
             <tr class="cell-1">
-              <td><img src="https://robohash.org/recyclingcenter" width="42" height="42" class="rounded-circle"></td>
-              <td>{{ center.name }}</td>
+              <td  class="text-center"><img src="https://robohash.org/recyclingcenter" width="42" height="42" class="rounded-circle"></td>
+              <td> <strong style="color:#A01540;">{{ center.name }}</strong></td>
               <td>{{ center.contact }}</td>
               <td>{{ center.county }}</td>
               <td>{{ center.city }}</td>
@@ -173,18 +172,17 @@
                   </ng-container>
                 </div>
               </td>
-              <td>
+              <td class="text-center" [ngClass]="{ ' text-success': isCenterOpen(center), ' text-danger': !isCenterOpen(center) }">
                 <ng-container *ngIf="center.alwaysOpen; else hourInterval">
-                  Open Always
+                  <strong>Open Always</strong>
                 </ng-container>
+
                 <ng-template #hourInterval>
-                  {{ center.openingHour | slice: 0:5 }} - {{ center.closingHour | slice: 0:5 }}
+                  <strong>{{ center.openingHour | slice: 0:5 }} - {{ center.closingHour | slice: 0:5 }}</strong>
                 </ng-template>
               </td>
-              <td>
-                <button type="button" [routerLink]="['/centers', center.centerId]" class="btn btn-success">
-                  <i class="fa-solid fa-recycle"></i> View
-                </button>
+              <td class="text-center">
+                <button type="button" [routerLink]="['/centers', center.centerId]" class="btn" style="background-color: #28a745; color: #fff;">  <i class="fa-solid fa-recycle"></i>  </button>
               </td>
             </tr>
             </tbody>
