--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -2,7 +2,7 @@
   <!-- Main Content -->
   <section class="main-section">
     <app-navbar [user]="state?.appData?.data?.user"></app-navbar>
-    <div style="margin-top: 100px"> </div>
+    <div style="margin-top: 100px"></div>
     <app-stats></app-stats>
     <div class="container mt-3">
       <div class="row">
@@ -16,39 +16,33 @@
           <!-- Add a 'View More' button -->
           <button mat-flat-button (click)="navigateToCentersView()" style="background-color: #A01540FF; color: cornsilk">
             <i class="fa-solid fa-list-ul"></i> More</button>
-
-
-<!--          <button class="btn btn-info me-2" (click)="navigateToCentersView()">-->
-<!--             View More-->
-<!--          </button>-->
         </div>
       </div>
 
       <!-- Table Section -->
       <div class="table-responsive mt-3">
-        <table matSort class="table table-hover">
+        <table matSort class="table table-hover table-bordered">
           <!-- Table Header -->
           <thead class="bg-gradient text-white">
           <tr>
-            <th scope="col" >Photo</th>
-            <th scope="col"  mat-sort-header="name">Name</th>
-            <th scope="col" >Contact</th>
-            <th scope="col"  mat-sort-header="county" class="sortable">County</th>
-            <th scope="col"  mat-sort-header="city" class="sortable">City</th>
-            <th scope="col"  mat-sort-header="materials" class="sortable">Accepted Materials</th>
-            <th scope="col" >Working Intervals</th>
-            <!--              <th scope="col">Status</th>-->
-            <th scope="col">Action</th>
+            <th class="text-center" scope="col" style="width: 6%;">Photo</th>
+            <th scope="col" mat-sort-header="name" style="width: 15%;">Center Name</th>
+            <th scope="col" style="width: 15%;">Contact Information</th>
+            <th scope="col" mat-sort-header="county" style="width: 10%;">County</th>
+            <th scope="col" mat-sort-header="city" style="width: 10%;">City</th>
+            <th scope="col" mat-sort-header="materials" class="text-center" style="width: 20%;">Accepted Materials</th>
+            <th class="text-center" scope="col" style="width: 12%;">Working Intervals</th>
+            <th scope="col" style="width: 6%;" class="text-center">Engage</th>
           </tr>
           </thead>
           <!-- Table Body -->
           <tbody *ngFor="let center of state?.appData?.data?.page?.content" class="table-body">
           <tr class="cell-1">
-            <td><img src="https://robohash.org/recyclingcenter" width="42" height="42" class="rounded-circle"></td>
-            <td>  {{ center.name }} </td>
-            <td> {{ center.contact }} </td>
-            <td>  {{ center.county }} </td>
-            <td>  {{ center.city }} </td>
+            <td  class="text-center"><img src="https://robohash.org/recyclingcenter" width="42" height="42" class="rounded-circle"></td>
+            <td> <strong style="color:#A01540;">{{ center.name }}</strong></td>
+            <td>{{ center.contact }}</td>
+            <td>{{ center.county }}</td>
+            <td>{{ center.city }}</td>
             <td>
               <div class="accepted-materials">
                 <ng-container *ngFor="let material of center | acceptedMaterials">
@@ -56,19 +50,16 @@
                 </ng-container>
               </div>
             </td>
-            <td [ngClass]="{ 'text-success': isCenterOpen(center), 'text-danger': !isCenterOpen(center) }">
+            <td class="text-center" [ngClass]="{ ' text-success': isCenterOpen(center), ' text-danger': !isCenterOpen(center) }">
               <ng-container *ngIf="center.alwaysOpen; else hourInterval">
                 <strong>Open Always</strong>
               </ng-container>
+
               <ng-template #hourInterval>
                 <strong>{{ center.openingHour | slice: 0:5 }} - {{ center.closingHour | slice: 0:5 }}</strong>
               </ng-template>
             </td>
-
-            <!--              <td>-->
-            <!--                <span class="badge bg-success">OPEN</span>-->
-            <!--              </td>-->
-            <td>
+            <td class="text-center">
               <button type="button" [routerLink]="['/centers', center.centerId]" class="btn" style="background-color: #28a745; color: #fff;">  <i class="fa-solid fa-recycle"></i>  </button>
             </td>
           </tr>
